// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update legacy multi-select adds [readOnly] to <input> when [editable] is a dynamic expression: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [editable]="isEditable" formControlName="items">
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                <input tuiInputChip [readOnly]="!isEditable" formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select adds TODO comment when [search] is present: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [search]="searchQuery" formControlName="items">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <!-- TODO: (Taiga UI migration) [search] was removed. Use (input) on <input tuiInputChip (input)="onSearch($any($event).target.value)"> to track changes; no direct equivalent for programmatic writes. See: https://taiga-ui.dev/components/input-chip -->
<input tuiInputChip formControlName="items" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select adds tuiInputChip to existing <input> inside and moves formControlName: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select formControlName="items">
                    <input placeholder="Type here" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip formControlName="items" placeholder="Type here" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select adds tuiSelectLike to <input> when [editable]="false": test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [editable]="false" formControlName="items">
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                <input tuiInputChip tuiSelectLike formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select adds tuiSelectLike to <input> when editable="false" (plain attribute): test.html 1`] = `
{
  "0. Before": "<tui-multi-select editable="false" formControlName="items"></tui-multi-select>",
  "1. After": "<tui-textfield multi tuiChevron><input tuiInputChip tuiSelectLike formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select does not add tuiSelectLike when [editable]="true": test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [editable]="true" formControlName="items">
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                <input tuiInputChip formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select does not duplicate tuiChevron if already present: test.html 1`] = `
{
  "0. Before": "<tui-multi-select tuiChevron formControlName="items"></tui-multi-select>",
  "1. After": "<tui-textfield multi tuiChevron><input tuiInputChip formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select does not duplicate tuiInputChip if already present: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select formControlName="items">
                    <input tuiInputChip placeholder="Type here" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input formControlName="items" tuiInputChip placeholder="Type here" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select keeps [stringify], [rows], [identityMatcher], [disabledItemHandler], tuiTextfieldSize on tui-textfield: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select
                    [stringify]="fn"
                    [rows]="3"
                    [identityMatcher]="matcher"
                    [disabledItemHandler]="handler"
                    tuiTextfieldSize="m"
                    formControlName="items"
                >
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron
                    [stringify]="fn"
                    [rows]="3"
                    [identityMatcher]="matcher"
                    [disabledItemHandler]="handler"
                    tuiTextfieldSize="m"
                >
                <input tuiInputChip formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select migrates (searchChange) to (input) on generated <input>: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select (searchChange)="onSearch($event)" formControlName="items">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <!-- TODO: (Taiga UI migration) (searchChange) was replaced by (input) on <input tuiInputChip (input)="onSearch($any($event).target.value)">. See: https://taiga-ui.dev/components/input-chip -->
<input tuiInputChip formControlName="items" (input)="onSearch(($event.target as HTMLInputElement).value)" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select migrates [tagValidator] to <tui-input-chip *tuiItem> with appearance binding: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [tagValidator]="isValid" formControlName="items">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip formControlName="items" />
<tui-input-chip *tuiItem="let ctx" [appearance]="isValid(ctx.item) ? '' : 'negative'" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select migrates basic tui-multi-select with formControlName: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select formControlName="items">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip formControlName="items" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select migrates full-featured tui-multi-select: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select
                    [stringify]="stringify"
                    [identityMatcher]="matcher"
                    [rows]="3"
                    [valueContent]="tmpl"
                    placeholder="Pick items"
                    [editable]="false"
                    [tagValidator]="isValid"
                    [autoColor]="true"
                    tuiTextfieldLabelOutside
                    formControlName="items"
                >
                    <label tuiLabel>Select</label>
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tuiTextfieldLabelOutside was removed. In v5, wrap <tui-textfield> in <label tuiLabel> for label-outside pattern. See: https://taiga-ui.dev/components/label -->
                <!-- TODO: (Taiga UI migration) [autoColor] was removed. Use tuiChip with auto-color appearance instead. See https://taiga-ui.dev/components/chip#auto-color -->
                <tui-textfield multi tuiChevron
                    [stringify]="stringify"
                    [identityMatcher]="matcher"
                    [rows]="3"
                    [content]="tmpl"
                >
                    <input tuiInputChip tuiSelectLike placeholder="Pick items" formControlName="items" />
<tui-input-chip *tuiItem="let ctx" [appearance]="isValid(ctx.item) ? '' : 'negative'" />
<label tuiLabel>Select</label>
                    <tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select migrates multiple tui-multi-select elements in one template: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select formControlName="first">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>
                <tui-multi-select formControlName="second">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip formControlName="first" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip formControlName="second" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select migrates tui-multi-select with [(ngModel)]: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [(ngModel)]="value">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip [(ngModel)]="value" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select migrates tui-multi-select with [formControl]: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [formControl]="ctrl">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip [formControl]="ctrl" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select moves [placeholder] binding to generated <input>: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [placeholder]="value.length ? '' : 'Pick'" formControlName="items">
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                <input tuiInputChip [placeholder]="value.length ? '' : 'Pick'" formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select moves placeholder to generated <input>: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select placeholder="Pick items" formControlName="items">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron>
                    <input tuiInputChip placeholder="Pick items" formControlName="items" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select removes [autoColor] and plain autoColor: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select
                    formControlName="items"
                    [autoColor]="true"
                    autoColor
                >
                </tui-multi-select>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) [autoColor] was removed. Use tuiChip with auto-color appearance instead. See https://taiga-ui.dev/components/chip#auto-color -->
                <tui-textfield multi tuiChevron
                >
                <input tuiInputChip formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select removes tuiTextfieldLabelOutside and [tuiTextfieldLabelOutside]: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select
                    formControlName="items"
                    [tuiTextfieldLabelOutside]="true"
                    tuiTextfieldLabelOutside
                >
                </tui-multi-select>",
  "1. After": "
                <!-- TODO: (Taiga UI migration) tuiTextfieldLabelOutside was removed. In v5, wrap <tui-textfield> in <label tuiLabel> for label-outside pattern. See: https://taiga-ui.dev/components/label -->
                <tui-textfield multi tuiChevron
                >
                <input tuiInputChip formControlName="items" />
</tui-textfield>",
}
`;

exports[`ng-update legacy multi-select renames [valueContent] to [content]: test.html 1`] = `
{
  "0. Before": "
                <tui-multi-select [valueContent]="tmpl" formControlName="items">
                    <tui-data-list-wrapper *tuiDataList [items]="items" />
                </tui-multi-select>",
  "1. After": "
                <tui-textfield multi tuiChevron [content]="tmpl">
                    <input tuiInputChip formControlName="items" />
<tui-data-list-wrapper *tuiDropdown [items]="items" />
                </tui-textfield>",
}
`;

exports[`ng-update legacy multi-select renames valueContent to content (non-binding form): test.html 1`] = `
{
  "0. Before": "<tui-multi-select valueContent="tmpl" formControlName="items"></tui-multi-select>",
  "1. After": "<tui-textfield multi tuiChevron content="tmpl"><input tuiInputChip formControlName="items" />
</tui-textfield>",
}
`;
